--- a/domovra_dev/app/templates/settings.html
+++ b/domovra_dev/app/templates/settings.html
@@ -13,7 +13,7 @@
         <button type="button" class="tab" data-tab="admindb">Admin DB</button>
         <button type="button" class="tab" data-tab="advanced">Avancés</button>
         <button type="button" class="tab" data-tab="journal">Journal</button>
-        <button type="button" class="tab" data-tab="about">À propos</button> <!-- NEW -->
+        <button type="button" class="tab" data-tab="about">À propos</button>
     </nav>
 
     {# ======= FORM RÉGLAGES UNIQUEMENT ======= #}
